--- a/Backend/FlightSearch_KingICT/src/main/resources/application.properties
+++ b/Backend/FlightSearch_KingICT/src/main/resources/application.properties
@@ -6,3 +6,4 @@ amadeus.api.secret=${AMADEUS_API_SECRET}
 amadeus.api.base-url=https://test.api.amadeus.com
 amadeus.api.token-url=/v1/security/oauth2/token
 amadeus.api.flight-offers-url=/v2/shopping/flight-offers
+amadeus.api.location-url=/v1/reference-data/locations
