--- a/Backend/FlightSearch_KingICT/src/main/resources/application.properties
+++ b/Backend/FlightSearch_KingICT/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=FlightSearch_KingICT
 amadeus.api.key=${AMADEUS_API_KEY}
 amadeus.api.secret=${AMADEUS_API_SECRET}
 
-amadeus.api.base-url=https://test.api.amadeus.com
+amadeus.api.base.url=https://test.api.amadeus.com
 amadeus.api.token-url=/v1/security/oauth2/token
 amadeus.api.flight-offers-url=/v2/shopping/flight-offers
 amadeus.api.location-url=/v1/reference-data/locations
