--- a/Backend/FlightSearch_KingICT/src/main/resources/application.properties
+++ b/Backend/FlightSearch_KingICT/src/main/resources/application.properties
@@ -9,5 +9,5 @@ amadeus.api.flight-offers-url=/v2/shopping/flight-offers
 amadeus.api.location-url=v1/reference-data/locations
 
 spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
